--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,41 @@
-body{
-    background-color: deepskyblue;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+ background-color: #AFFF16;
+ font-family: Arial, Helvetica, sans-serif;
+ display: flex;
+ flex-wrap: wrap;
 }
-h1{
-    color: white;
-    text-align: center;
+h1 {
+ color: maroon;
+ text-align: center;
+ width: 100%;
+ display: block;
 }
-.assign{
-    margin: 10px;
-    padding: 10px;
-    background-color: bisque;
-    display: flex;
+h1:hover {
+ color: hotpink;
+ text-align: center;
+ width: 100%;
+ display: block;
+}
+a {
+ text-decoration: none;
+ color: black;
+}
+.assign {
+ background-color: grey;
+ margin: 10px;
+ padding: 10px;
+ border-radius: 20px;
+ width: 20%;
+ box-shadow: 8px 8px brown;
+ display: block; /* instead of flex */
 }
 .assign img {
-    width: 200px;
-    padding: 10px;
+ width: 200px;
+ margin: 10px;
+ border: 2px solid midnightblue;
+}
+.assign img:hover {
+ width: 200px;
+ margin: 10px;
+ border: 2px dotted yellow;
 }
